--- a/menu/index.html
+++ b/menu/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" href="../menu/css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Flexbox tutorial</title>
+	<title>3D menu</title>
 </head>
 
 <body>
